@@ -1,9 +1,9 @@
-/*	$NetBSD: content-bozo.c,v 1.18 2020/09/12 14:44:25 rhialto Exp $	*/
+/*	$NetBSD: content-bozo.c,v 1.19 2020/10/15 04:21:53 mrg Exp $	*/
 
 /*	$eterna: content-bozo.c,v 1.17 2011/11/18 09:21:15 mrg Exp $	*/
 
 /*
- * Copyright (c) 1997-2018 Matthew R. Green
+ * Copyright (c) 1997-2020 Matthew R. Green
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -213,7 +213,6 @@ bozo_match_content_map(bozohttpd_t *httpd, const char *name,
 /*
  * given the file name, return a valid Content-Type: value.
  */
-/* ARGSUSED */
 const char *
 bozo_content_type(bozo_httpreq_t *request, const char *file)
 {
